--- a/practica_1/Inicio_sesion/package.json
+++ b/practica_1/Inicio_sesion/package.json
@@ -10,6 +10,7 @@
     "deploy": "npm run build && firebase deploy"
   },
   "dependencies": {
+    "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
     "core-js": "^3.4.4",
     "firebase": "^7.8.2",
