--- a/practica_1/Inicio_sesion/package.json
+++ b/practica_1/Inicio_sesion/package.json
@@ -13,10 +13,11 @@
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
     "core-js": "^3.4.4",
-    "firebase": "^7.8.2",
+    "firebase": "^7.10.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vuefire": "^2.2.1",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
